--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-chainlit>=2.5.5
+chainlit==0.7.700
 python-dotenv==1.0.0
 requests==2.31.0
 agents==1.1.0
+openai==1.12.0
+google-generativeai==0.3.2
