--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-chainlit==0.7.700
+chainlit==2.5.5
 python-dotenv==1.0.0
 requests==2.31.0
 agents==1.1.0
 openai==1.12.0
 google-generativeai==0.3.2
+protobuf==3.20.3
+google-api-core==2.11.1
+googleapis-common-protos==1.56.4
+grpcio==1.57.0
+numpy==1.26.4
