--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,24 @@
 [project]
-name = "advance-chatbot"
+name = "advance-agent"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.12"
+description = "Advanced Chainlit Agent with Google Generative AI"
+requires-python = ">=3.11"
+
 dependencies = [
-    "chainlit>=2.5.5",
-    "openai-agents>=0.0.9",
-    "python-dotenv>=1.1.0",
+    "chainlit==2.5.5",
+    "python-dotenv==1.0.0",
+    "requests==2.31.0",
+    "google-generativeai==0.3.2",
+    "protobuf~=3.20.0",
+    "google-api-core>=1.34.0,<3.0.0.dev0",
+    "googleapis-common-protos>=1.56.4,<2.0",
+    "grpcio>=1.51.3",
+    "pydantic>=2.0,<3.0",
+    "typing-extensions>=4.5.0",
+    "fastapi>=0.100.0,<0.101.0",
+    "httpx>=0.23.0,<0.25.0",
 ]
+
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
