--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-chainlit==2.5.5
+chainlit==0.7.700
 python-dotenv==1.0.0
 requests==2.31.0
-google-generativeai==0.3.2
-protobuf~=3.20.0
-google-api-core>=1.34.0,<3.0.0dev
-googleapis-common-protos>=1.56.4,<2.0
-grpcio>=1.51.3
-pydantic>=2.0,<3.0
-typing-extensions>=4.5.0
-fastapi>=0.100.0,<0.101.0
-httpx>=0.23.0,<0.25.0
+agents==1.1.0
